Private docker option added to artifactory service.

--- a/deployment/sandbox-v2/helm/charts/artifactory/templates/artifactory-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/artifactory/templates/artifactory-dep.yaml
@@ -21,6 +21,7 @@ spec:
         app: {{ .Values.docker.service }} 
     spec:
       containers:
+      {{- include "dockerHubSecret" .  | indent 6}}
       - name: {{  .Values.docker.service }}
         image: {{ .Values.docker.image }}
         imagePullPolicy: {{ .Values.imagePullPolicy }}
