Selinux disabled on all machines.

--- a/deployment/sandbox-v2/playbooks/console.yml
+++ b/deployment/sandbox-v2/playbooks/console.yml
@@ -48,7 +48,7 @@
   gather_facts: true
   roles:
      - {role: packages/vim, tags: [vim]}
-     #- {role: packages/telnet, tags: [telnet]}
+     - {role: packages/telnet, tags: [telnet]}
      - {role: packages/bind-utils, tags: [bind-utils]}  
 
 # Change datetime of all machines to UTC
@@ -60,6 +60,8 @@
       environment:
         TZ: UTC
   
-    - debug:
-        msg:
-          - "{{ date_utc.stdout }}"
+    - name: Change selinux to permissive mode.  
+      selinux:
+        policy: targeted
+        state: permissive
+      become: yes
