--- a/deployment/sandbox-v2/roles/postgres-init/tasks/init_dml.yml
+++ b/deployment/sandbox-v2/roles/postgres-init/tasks/init_dml.yml
@@ -20,7 +20,7 @@
     regexp: '^BASEPATH='
     line: BASEPATH={{pg_sql_path}}
 
-- name: '{{pg_db_name}}: Update log path in postgres init dml files' 
+- name: '{{pg_db_name}}: Update log path in postgres dml init files' 
   lineinfile:
     path: '{{pg_sql_path}}/{{pg_db_name}}/{{pg_db_name}}_deploy.properties'
     regexp: '^LOG_PATH='
