--- a/deployment/sandbox-v2/roles/k8scluster/dashboard/files/view-dashboard.yaml
+++ b/deployment/sandbox-v2/roles/k8scluster/dashboard/files/view-dashboard.yaml
@@ -1,10 +1,10 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: view-dashboard
+  name: dashboard-viewonly
 rules:
 - apiGroups:
-  - ""
+  - "*"
   resources:
   - configmaps
   - endpoints
@@ -22,7 +22,7 @@ rules:
   - list
   - watch
 - apiGroups:
-  - ""
+  - "*"
   resources:
   - bindings
   - events
@@ -38,7 +38,7 @@ rules:
   - list
   - watch
 - apiGroups:
-  - ""
+  - "*"
   resources:
   - namespaces
   verbs:
