[MOSIP-10589] updating changes as per 1.1.4 release

--- a/deployment/sandbox-v2/helm/charts/kernel/templates/auth-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/kernel/templates/auth-dep.yaml
@@ -43,6 +43,8 @@ spec:
           value: {{ .Values.isGlowroot }} 
         - name: iam_adapter_url_env
           value: {{ .Values.iamAdapterUrl }}
+        - name: container_user
+          value: {{ .Values.cont_user }}
         ports:
         - containerPort: {{ .Values.services.auth.containerPort }}
         readinessProbe:
