--- a/deployment/sandbox-v2/playbooks/onboard/partner.yml
+++ b/deployment/sandbox-v2/playbooks/onboard/partner.yml
@@ -13,12 +13,7 @@
 
     - name:  Upload policies
       shell:
-        cmd: './onboard.py policy data/partners/ --server {{site.sandbox_internal_url}} --disable_ssl_verify'
-        chdir: '{{install_root}}/utils/onboard/partner'
-
-    - name:  Add partners
-      shell:
-        cmd: './onboard.py partner data/partners/ --server {{site.sandbox_internal_url}} --disable_ssl_verify'
+        cmd: './onboard.py policy data/policies/ --server {{site.sandbox_internal_url}} --disable_ssl_verify'
         chdir: '{{install_root}}/utils/onboard/partner'
 
     - name:  Add partners
