--- a/deployment/sandbox-v2/playbooks/console.yml
+++ b/deployment/sandbox-v2/playbooks/console.yml
@@ -8,6 +8,7 @@
   tasks:
     - {name: 'Create tmp folder {{tmp_dir}}', file: {name: '{{tmp_dir}}', state: directory}}
     - {name: 'Create logs folder {{logs_dir}}', file: {name: '{{logs_dir}}', state: directory}}
+    - {name: 'Create tmp yaml folder {{tmp_yamls}}', file: {name: '{{tmp_yamls}}', state: directory}}
 
 - hosts: console
   gather_facts: true 
