[MOSIP-11319] net-tools added as part of standard installation.

--- a/deployment/sandbox-v2/playbooks/console.yml
+++ b/deployment/sandbox-v2/playbooks/console.yml
@@ -52,6 +52,7 @@
      - {role: packages/vim, tags: [vim]}
      - {role: packages/telnet, tags: [telnet]}
      - {role: packages/bind-utils, tags: [bind-utils]}  
+     - {role: packages/net-tools, tags: [net-tools]}
 
 # Change datetime of all machines to UTC
   vars:
