Reverting hosts.ini file.

--- a/deployment/sandbox-v2/hosts.ini
+++ b/deployment/sandbox-v2/hosts.ini
@@ -10,6 +10,12 @@ mzmaster.sb ansible_user=root ansible_host=10.20.20.99
 mzworker0.sb ansible_user=root ansible_host=10.20.20.100
 mzworker1.sb ansible_user=root ansible_host=10.20.20.101
 mzworker2.sb ansible_user=root ansible_host=10.20.20.102
+mzworker3.sb ansible_user=root ansible_host=10.20.20.103
+mzworker4.sb ansible_user=root ansible_host=10.20.20.104
+mzworker5.sb ansible_user=root ansible_host=10.20.20.105
+mzworker6.sb ansible_user=root ansible_host=10.20.20.106
+mzworker7.sb ansible_user=root ansible_host=10.20.20.107
+mzworker8.sb ansible_user=root ansible_host=10.20.20.108
 
 # De-Military zone (dmz) cluster
 [dmzmaster]
