--- a/deployment/sandbox-v2/group_vars/all.yml
+++ b/deployment/sandbox-v2/group_vars/all.yml
@@ -14,9 +14,10 @@ versions_file: '{{install_root}}/versions.yml'
 podconfig_file: '{{install_root}}/podconfig.yml'
 
 sandbox_domain_name: minibox.mosip.net
+internal_domain_name: '{{ansible_host}}'  # IP address of console
 site:
   sandbox_public_url: 'https://{{sandbox_domain_name}}'  # The public url needs to point to nginx on console
-  sandbox_internal_url: 'https://{{inventory_hostname}}'  # Pointing to nginx which runs on console
+  sandbox_internal_url: 'https://{{internal_domain_name}}'  # Pointing to nginx which runs on console
   sandbox_internal_tld: 'sb'  # Top-level domain name.  This much match tld of all hosts in hosts.ini
   ingress_tld: 'ingress'  # Fixed. Don't change this!
   ssl:
@@ -27,7 +28,7 @@ ssl:
   ca:  # Certifcation authority
     selfsigned: 
       get_certificate: true
-      common_name: '{{inventory_hostname}}'  # The host on which certs are generated   
+      common_name: '{{internal_domain_name}}'  # The host on which certs are generated   
       certificate: '/etc/ssl/certs/nginx-selfsigned.crt'
       certificate_key: '/etc/ssl/private/nginx-selfsigned.key'
       csr: '/etc/ssl/csr/nginx-selfsigned.csr'
