[MOSIP-11425] Log roll implemented. Include all modules for logging.

--- a/deployment/sandbox-v2/roles/k8scluster/docker/tasks/main.yml
+++ b/deployment/sandbox-v2/roles/k8scluster/docker/tasks/main.yml
@@ -14,6 +14,9 @@
 - name: Copy Docker environment config file
   template: src=docker.j2 dest={{ system_env_dir }}/docker
 
+- name: Copy daemon.json to /etc/docker
+  template: src=daemon.json.j2 dest=/etc/docker/daemon.json
+  
 - name: Add any insecure registries to Docker config
   when: insecure_registries is defined and insecure_registries | length > 0
   lineinfile: dest={{ system_env_dir }}/docker regexp=^INSECURE_REGISTRY= line=INSECURE_REGISTRY="{% for reg in insecure_registries %}--insecure-registry={{ reg }} {% endfor %}"
