--- a/deployment/sandbox-v2/group_vars/all.yml
+++ b/deployment/sandbox-v2/group_vars/all.yml
@@ -42,21 +42,22 @@ developer_mode: true  # false if limited APIs are exposed externally.
     
 is_glowroot: absent  # absent or present
 
-docker_wait_time: 600   # Wait for docker to pull and deploy
-docker_hub:
-  private: false  # For private repo on Docker Hub, set this to true, and set credentials in secrets.yml
-  keyname: dockerhubkey  # Name of kubernetes secret
-
-local_docker_registry:
-  enabled: false
-  image: 'registry:2'
-  name: 'local-registry'
-  port: 5000
-  
-# List of local docker registries (other than Docker Hub) is needed to make sure http access works when dockers
-# are pulled from k8s cluster.  Used while installing clusters. See k8s/docker role.
-docker_registries:  
-  - '{{inventory_hostname}}:{{local_docker_registry.port}}'   # Docker registry running on console
+docker:
+  hub:
+    private: false  # For private repo on Docker Hub, set this to true, and set credentials in secrets.yml
+    keyname: dockerhubkey  # Name of kubernetes secret
+  local_registry: 
+    enabled: false
+    image: 'registry:2'
+    name: 'local-registry'
+    port: 5000
+  # List of local docker registries (other than Docker Hub) is needed to make sure http access works when dockers
+  # are pulled to k8s cluster.  Used while installing clusters. See k8s/docker role.
+  registries:  
+    - '{{inventory_hostname}}:5000'   # Docker registry running on console. Port should be same as above
+  log_roll:
+      max_size: "100m"  # See https://docs.docker.com/config/containers/logging/configure/
+      max_files: 5  # Max number of rolling files
 
 clusters:
   mz:
