[MOSIP-10966] Self cert created everytime.

--- a/deployment/sandbox-v2/roles/ssl/self-signed/tasks/main.yml
+++ b/deployment/sandbox-v2/roles/ssl/self-signed/tasks/main.yml
@@ -41,6 +41,7 @@
       privatekey_path: '{{ssl.ca.selfsigned.certificate_key}}' 
       common_name: '{{ssl.ca.selfsigned.common_name}}'
       subject_alt_name: '{{selfsigned_ip}}'
+      force: yes
     become: yes
 
   - name: Generate a Self Signed OpenSSL certificate
